feat: Subscription API Hardening