@@ -1,5 +1,8 @@
 package com.yurepires.lazydeploy.model.rule;
 
+import java.time.Instant;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.UUID;
 
@@ -7,13 +10,34 @@ public record NotificationRuleDefinition(
         UUID id,
         String type,
         boolean enabled,
-        Map<String, Object> parameters
+        Map<String, Object> parameters,
+        Instant createdAt,
+        Instant updatedAt
 ) {
-    public NotificationRuleDefinition(String type, boolean enabled, Map<String, Object> parameters) {
-        this(null, type, enabled, parameters);
+    public NotificationRuleDefinition(
+            String type,
+            boolean enabled,
+            Map<String, Object> parameters
+    ) {
+        this(null, type, enabled, parameters, null, null);
+    }
+
+    public NotificationRuleDefinition(
+            UUID id,
+            String type,
+            boolean enabled,
+            Map<String, Object> parameters
+    ) {
+        this(id, type, enabled, parameters, null, null);
     }
 
     public NotificationRuleDefinition {
-        parameters = parameters == null ? Map.of() : Map.copyOf(parameters);
+        if (parameters == null) {
+            parameters = Map.of();
+        } else {
+            parameters = Collections.unmodifiableMap(
+                    new LinkedHashMap<>(parameters)
+            );
+        }
     }
 }
